SERVER-47841 Ensure 4.5 nodes always send SSV with {kNoConnectionVersioning:true}