src/mongo/s/sharding_router_test_fixture.cpp
@@ -68,7 +68,6 @@
 #include "mongo/s/config_server_catalog_cache_loader.h"
 #include "mongo/s/grid.h"
 #include "mongo/s/query/cluster_cursor_manager.h"
-#include "mongo/s/request_types/set_shard_version_request.h"
 #include "mongo/s/sharding_egress_metadata_hook_for_mongos.h"
 #include "mongo/s/sharding_task_executor.h"
 #include "mongo/s/write_ops/batched_command_response.h"
@@ -444,26 +443,6 @@ void ShardingTestFixture::expectUpdateCollection(const HostAndPort& expectedHost
         response.setNModified(1);
 
         return response.toBSON();
-    });
-}
-
-void ShardingTestFixture::expectSetShardVersion(const HostAndPort& expectedHost,
-                                                const ShardType& expectedShard,
-                                                const NamespaceString& expectedNs,
-                                                const ChunkVersion& expectedChunkVersion) {
-    onCommand([&](const RemoteCommandRequest& request) {
-        ASSERT_EQ(expectedHost, request.target);
-        ASSERT_BSONOBJ_EQ(rpc::makeEmptyMetadata(),
-                          rpc::TrackingMetadata::removeTrackingData(request.metadata));
-
-        SetShardVersionRequest ssv =
-            assertGet(SetShardVersionRequest::parseFromBSON(request.cmdObj));
-
-        ASSERT(ssv.isAuthoritative());
-        ASSERT_EQ(expectedNs, ssv.getNS());
-        ASSERT_EQ(expectedChunkVersion.toString(), ssv.getNSVersion().toString());
-
-        return BSON("ok" << true);
     });
 }
 
